--- a/index.html
+++ b/index.html
@@ -126,98 +126,76 @@
       </div>
     </div>
 
-    <br />
-
     <div class="container deployed-div" id="deployed-div">
+      <br />
       <h2>Deployed Projects</h2>
       <br />
       <div class="row">
         <div class="col col-sm-4">
-          <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img
-                  src="images/LLSearch.png"
-                  class="card-img-top"
-                  alt="Liquor list site search image"
-                />
-              </div>
-              <div class="flip-card-back">
-                <h1>Liquor List</h1>
-                <div class="card-body">
-                  <p class="card-text">
-                    Liquor-list site. Search site designed to search for
-                    cocktails based on your ingredients lying around the house.
-                    Designed with Node, Express EJS, SQL, Postgres, JavaScript
-                    and CSS.
-                  </p>
-                  <a
-                    href="https://liquor-list.herokuapp.com/"
-                    target="blank"
-                    class="card-link"
-                    >Check it out!</a
-                  >
-                </div>
-              </div>
+          <div class="card">
+            <img
+              src="images/LLSearch.png"
+              class="card-img-top"
+              alt="Liquor list site search image"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Liquor-list site. Search site designed to search for cocktails
+                based on your ingredients lying around the house. Designed with
+                Node, Express EJS, SQL, Postgres, Mongoose, JavaScript and CSS
+              </p>
             </div>
+            <a
+              href="https://liquor-list.herokuapp.com/"
+              target="blank"
+              class="card-link"
+              >Check it out!</a
+            >
           </div>
         </div>
         <div class="col col-sm-4">
-          <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img
-                  src="images/gear-page.png"
-                  class="card-img-top"
-                  alt="Wow Gear tracker details image"
-                />
-              </div>
-              <div class="flip-card-back">
-                <h1>WOW-GT</h1>
-                <div class="card-body">
-                  <p class="card-text">
-                    World of Warcraft classic gear tracker, created to allow a
-                    user to add and display at a glance the gear they want to
-                    collect within WOW classic. Built with Django, Python and
-                    Materialze.
-                  </p>
-                  <a
-                    href="https://wow-gt.herokuapp.com/"
-                    target="blank"
-                    class="card-link"
-                    >Check it out!</a
-                  >
-                </div>
-              </div>
+          <div class="card">
+            <img
+              src="images/gear-page.png"
+              class="card-img-top"
+              alt="Wow Gear tracker details image"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                World of Warcraft classic gear tracker, created to allow a user
+                to add and display at a glance the gear they want to collect
+                within WOW classic. Built with Django, Python, SQL and
+                Materialze.
+              </p>
             </div>
+            <a
+              href="https://wow-gt.herokuapp.com/"
+              target="blank"
+              class="card-link"
+              >Check it out!</a
+            >
           </div>
         </div>
         <div class="col col-sm-4">
-          <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img
-                  src="images/cardinal.jpg"
-                  class="card-img-top"
-                  alt="Picture of a cardinal"
-                />
-              </div>
-              <div class="flip-card-back">
-                <h1>Bird Flow</h1>
-                <div class="card-body">
-                  <p class="card-text">
-                    A one for one square by square recreation of level one of
-                    Pacman, built with basic HTML, CSS, and JavaScript.
-                  </p>
-                  <a
-                    href="https://bird-flow.herokuapp.com/"
-                    target="blank"
-                    class="card-link"
-                    >Check it out!</a
-                  >
-                </div>
-              </div>
+          <div class="card">
+            <img
+              src="images/cardinal.jpg"
+              class="card-img-top"
+              alt="Picture of a cardinal"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Bird-Flow, group project to search and display birds within a
+                desired area. Designed with React, MongoDB, Express, Node,
+                JavaScript and CSS
+              </p>
             </div>
+            <a
+              href="https://bird-flow.herokuapp.com/"
+              target="blank"
+              class="card-link"
+              >Check it out!</a
+            >
           </div>
         </div>
       </div>
@@ -226,67 +204,52 @@
 
       <div class="row">
         <div class="col col-sm-4">
-          <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img
-                  src="images/Pacman.png"
-                  class="card-img-top"
-                  alt="Pacman start screen"
-                />
-              </div>
-              <div class="flip-card-back">
-                <h1>Pacman</h1>
-                <div class="card-body">
-                  <p class="card-text">
-                    A one for one square by square recreation of level one of
-                    Pacman, built with basic HTML, CSS, and JavaScript.
-                  </p>
-                  <a
-                    href="https://aprin418.github.io/JavaScript-Pacman/"
-                    target="blank"
-                    class="card-link"
-                    >Check it out!</a
-                  >
-                </div>
-              </div>
+          <div class="card">
+            <img
+              src="images/Pacman.png"
+              class="card-img-top"
+              alt="Pacman start screen"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                A one for one square by square recreation of level one of
+                Pacman, built with basic HTML, CSS, and JavaScript.
+              </p>
             </div>
+            <a
+              href="https://aprin418.github.io/JavaScript-Pacman/"
+              target="blank"
+              class="card-link"
+              >Check it out!</a
+            >
           </div>
         </div>
         <div class="col col-sm-4">
-          <div class="flip-card">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img
-                  src="images/War.png"
-                  class="card-img-top"
-                  alt="Pacman start screen"
-                />
-              </div>
-              <div class="flip-card-back">
-                <h1>War!</h1>
-                <div class="card-body">
-                  <p class="card-text">
-                    Recreation of the classic game of war with a standard 52
-                    card deck.
-                  </p>
-                  <a
-                    href="https://aprin418.github.io/war-cards/"
-                    target="blank"
-                    class="card-link"
-                    >Check it out!</a
-                  >
-                </div>
-              </div>
+          <div class="card">
+            <img
+              src="images/War.png"
+              class="card-img-top"
+              alt="Pacman start screen"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Recreation of the classic game of war with a standard 52 card
+                deck.
+              </p>
             </div>
+            <a
+              href="https://aprin418.github.io/war-cards/"
+              target="blank"
+              class="card-link"
+              >Check it out!</a
+            >
           </div>
         </div>
       </div>
     </div>
 
-    <br />
-
     <div class="container-fluid contact-div" id="contact-div">
+      <br />
       <h2>Contact Info</h2>
       <br />
       <div class="row mb-0">
