Added Nucamp Project

--- a/index.html
+++ b/index.html
@@ -156,20 +156,21 @@
         <div class="col col-sm-4">
           <div class="card">
             <img
-              src="images/gear-page.png"
+              src="images/nucampsite.png"
               class="card-img-top"
-              alt="Wow Gear tracker details image"
+              alt="nucampsite homepage"
             />
             <div class="card-body">
               <p class="card-text">
-                World of Warcraft classic gear tracker, created to allow a user
-                to add and display at a glance the gear they want to collect
-                within WOW classic. Built with Django, Python, SQL and
-                Materialze.
+                Mock camping company website designed for Nucamp. Allows a user
+                to search through campsites listed on the site and create/edit
+                comments, or save and remove the campsites from the users
+                favorites section. Created with React, Redux, MongoDB, Mongoose,
+                express and Node.
               </p>
             </div>
             <a
-              href="https://wow-gt.herokuapp.com/"
+              href="http://18.188.110.251/home"
               target="blank"
               class="card-link"
               >Check it out!</a
@@ -203,6 +204,29 @@
       <br />
 
       <div class="row">
+        <div class="col col-sm-4">
+          <div class="card">
+            <img
+              src="images/gear-page.png"
+              class="card-img-top"
+              alt="Wow Gear tracker details image"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                World of Warcraft classic gear tracker, created to allow a user
+                to add and display at a glance the gear they want to collect
+                within WOW classic. Built with Django, Python, SQL and
+                Materialze.
+              </p>
+            </div>
+            <a
+              href="https://wow-gt.herokuapp.com/"
+              target="blank"
+              class="card-link"
+              >Check it out!</a
+            >
+          </div>
+        </div>
         <div class="col col-sm-4">
           <div class="card">
             <img
