fixed mobile sizing

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <h2>Deployed Projects</h2>
       <br />
       <div class="row">
-        <div class="col col-sm-4">
+        <div class="col col-md-4 col-sm-12">
           <div class="card">
             <img
               src="images/LLSearch.png"
@@ -153,7 +153,7 @@
             >
           </div>
         </div>
-        <div class="col col-sm-4">
+        <div class="col col-md-4 col-sm-12">
           <div class="card">
             <img
               src="images/nucampsite.png"
@@ -177,7 +177,7 @@
             >
           </div>
         </div>
-        <div class="col col-sm-4">
+        <div class="col col-md-4 col-sm-12">
           <div class="card">
             <img
               src="images/cardinal.jpg"
@@ -204,7 +204,7 @@
       <br />
 
       <div class="row">
-        <div class="col col-sm-4">
+        <div class="col col-md-4 col-sm-12">
           <div class="card">
             <img
               src="images/gear-page.png"
@@ -227,7 +227,7 @@
             >
           </div>
         </div>
-        <div class="col col-sm-4">
+        <div class="col col-md-4 col-sm-12">
           <div class="card">
             <img
               src="images/Pacman.png"
@@ -248,7 +248,7 @@
             >
           </div>
         </div>
-        <div class="col col-sm-4">
+        <div class="col col-md-4 col-sm-12">
           <div class="card">
             <img
               src="images/War.png"
