card updates for descriptions

--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
               <p class="card-text">
                 Liquor-list site. Search site designed to search for cocktails
                 based on your ingredients lying around the house. Designed with
-                Node, Express EJS, SQL, Postgres, Mongoose, JavaScript and CSS
+                Node, Express EJS, SQL, Postgres, Mongoose, JavaScript and CSS.
+                Deployed with Heroku
               </p>
             </div>
             <a
@@ -153,6 +154,7 @@
             >
           </div>
         </div>
+
         <div class="col col-md-4 col-sm-12">
           <div class="card">
             <img
@@ -162,11 +164,11 @@
             />
             <div class="card-body">
               <p class="card-text">
-                Mock camping company website designed for Nucamp. Allows a user
-                to search through campsites listed on the site and create/edit
-                comments, or save and remove the campsites from the users
-                favorites section. Created with React, Redux, MongoDB, Mongoose,
-                express and Node.
+                Mock camping company website. Allows a user to search through
+                campsites listed on the site and create/edit comments, or save
+                and remove the campsites from the users favorites section.
+                Created with React, Redux, MongoDB, Mongoose, express and Node.
+                Deployed with Amazon Web Service.
               </p>
             </div>
             <a
@@ -177,6 +179,7 @@
             >
           </div>
         </div>
+
         <div class="col col-md-4 col-sm-12">
           <div class="card">
             <img
@@ -188,7 +191,7 @@
               <p class="card-text">
                 Bird-Flow, group project to search and display birds within a
                 desired area. Designed with React, MongoDB, Express, Node,
-                JavaScript and CSS
+                JavaScript and CSS. Deployed with Heroku
               </p>
             </div>
             <a
@@ -216,7 +219,7 @@
                 World of Warcraft classic gear tracker, created to allow a user
                 to add and display at a glance the gear they want to collect
                 within WOW classic. Built with Django, Python, SQL and
-                Materialze.
+                Materialze. Deployed with Heroku
               </p>
             </div>
             <a
@@ -227,6 +230,7 @@
             >
           </div>
         </div>
+
         <div class="col col-md-4 col-sm-12">
           <div class="card">
             <img
@@ -237,7 +241,8 @@
             <div class="card-body">
               <p class="card-text">
                 A one for one square by square recreation of level one of
-                Pacman, built with basic HTML, CSS, and JavaScript.
+                Pacman. Built with JavaScript, BootStrap, CSS and HTML. Deployed
+                on Github pages.
               </p>
             </div>
             <a
@@ -248,17 +253,15 @@
             >
           </div>
         </div>
+
         <div class="col col-md-4 col-sm-12">
           <div class="card">
-            <img
-              src="images/War.png"
-              class="card-img-top"
-              alt="Pacman start screen"
-            />
+            <img src="images/War.png" class="card-img-top" alt="Game of war" />
             <div class="card-body">
               <p class="card-text">
                 Recreation of the classic game of war with a standard 52 card
-                deck.
+                deck. Built with JavaScript, BootStrap, CSS and HTML. Deployed
+                on Github pages.
               </p>
             </div>
             <a
